force-app/main/default/objects/Account/fields/Number_Of_Contacts_Over_18__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Contacts_Over_18__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Contacts Over 18</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>