force-app/main/default/objects/Account/fields/Oldest_Contact__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Contact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Oldest Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>